--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Mark Akritas"]
 [tool.poetry.dependencies]
 python = "^3.9"
 matplotlib = "^3.4.3"
+pandas = "^1.3.4"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
